k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokn-website
spec:
  selector:
    app: tokn-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
